style.css
/* ... */
@media screen and (max-width: 768px) {

    body{
        overflow-x: hidden;
    }

    .home{
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        margin-bottom: 0;
    }

    .home-text{
        display: none;
    }

    .hero-image{
        display: none;
    }

    .hero-mobile{
        display: block;
        width: 100vb;
    }

    .home-text h1{
        font-size: 20px;
    }

    .home-logo{
        display: none;
    }

    body h1{
        font-size: 40px;
    }

    .about-col-1, .about-col-2{
        flex-basis: 100%;
    }

    .about-col-1 img{
        margin: 10% 10%;
    }

    .tab-links{
        font-size: 18px;
        margin-right: 20px;
    }

    .tab-contents p{
        font-size: 18px;
    }

    .services-list div{
        max-width: 100%;
    }

    .contact-left, .contact-right{
        flex-basis: 100%;
        margin-left: 15px;
        padding-left: 0;
    }

    .contact-right form{
        margin: 0;
    }
    
    .skillcard img{
        padding-right: 0;
    }

    .website, .game, .program{
        width: 350px;
        height: 440px;
    }

    .website-description, .game-description, .program-description{
        width: 330px;
    }

    .game video{
        width: 330px;
    }

    .website img, .program img{
        min-height: 200px;
    }

    .website-description .buttons, .game-description .buttons, .program-description a{
        bottom: 20px;
    }
    
    .website-description .buttons a, .game-description .buttons a, .program-description a{
        margin: 0 20px;
        font-size: 24px;
        line-height: 40px;
        width: 40px;
        height: 40px;
    }

}

